# NoteMind

./: README.md  main.py  plan.md  pyproject.toml
madargani_notemind/: __init__.py  cli.py
madargani_notemind/api/: commit_files.py  get_rag_response.py  search_embeddings.py
madargani_notemind/api/core/: chunk_text.py  extract_text.py  init_vector_db.py  text_from_pdf.py  update_embeddings.py
madargani_notemind/cli/: __init__.py
madargani_notemind/cli/commands/: chat.py  commit.py  init.py  search.py  status.py
madargani_notemind/commands/: chat.py  commit.py  init.py  search.py  status.py
madargani_notemind/core/: chunk_text.py  get_files.py  get_status.py  init_file_status_db.py  update_embeddings.py
madargani_notemind/streamlit/: app.py
notes/: plan.md  resources.md  ui_mockups.md
notes/journal/: 25-07-11.md  25-07-12.md  25-07-14.md
src/api/: get_status.py  init_notemind.py  search_embeddings.py
src/api/core/: get_files.py  init_file_status_db.py  update_status.py
src/app_init/: init_app_data.py  init_state_db.py  init_vector_db.py
src/note_management/: add_note.py  chunk_text.py  extract_text.py  get_notes.py
src/notemind_management/: create_notemind.py  delete_notemind.py  list_noteminds.py  rename_notemind.py
src/querying/: ask.py  search.py
src/streamlit/: app.py  chat_interface.py  sidebar.py
src/tkinter/: app.py
tests/: test_add_note.py  test_ask.py  test_chat.py  test_commit.py  test_get_notes.py  test_init.py
tests/sample_notes/: book_review.md  chemical_equilibrium_notes.md  embedding_strategies.md  gardening.md  notemind_milestones.md  personal_reflection.md  team_notes.md
tests/sample_notes/.notemind/: file_status.db
tests/sample_notes/.notemind/chroma/: chroma.sqlite3
