[project]
name = "madargani-notemind"
version = "0.1.0"
description = "Transform your notes into a smart searchable knowledge base."
authors = [
    { name = "madargani", email = "mad3913@gmail.com" }
]
readme = "README.md"
requires-python = "^3.9"
dependencies = [
    "typer (>=0.16.0,<0.17.0)",
    "chromadb (>=1.0.15,<2.0.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)"
]

[project.scripts]
notemind = 'madargani_notemind.cli:app'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"
typer = {extras = ["all"], version = "^0.16.0"}

